src/objects/Asset_Management__c.object
<CustomObject>
    <fields>
        <fullName>AssetNumber__c</fullName>
        <formula>&quot;EXT&quot;+&quot;/&quot;+&quot;AST&quot;+&quot;/&quot;+ Assets_Auto_Number__c</formula>
        <label>Asset Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Category__c</fullName>
        <label>Asset Category</label>
        <picklist>
            <picklistValues>
                <fullName>Wifi card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software licenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptops</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_S_L_Number__c</fullName>
        <label>Asset S/L Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <label>Asset Type</label>
        <picklist>
            <picklistValues>
                <fullName>Leased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_number__c</fullName>
        <label>Asset number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Assets_Auto_Number__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>Assets Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <label>Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Asset_Managements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Make__c</fullName>
        <label>Manufacturer Make</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Model__c</fullName>
        <label>Manufacturer Model</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipName>Asset_Managements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Asset</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Asset  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>